// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Friends Service when listing friend requests will allow filtering by both friend requests 1`] = `
{
  "friendRequests": [
    {
      "accepted": undefined,
      "created": 2023-11-17T05:26:37.224Z,
      "direction": "incoming",
      "expires": 2023-12-24T21:26:39.125Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/956.jpg",
        "id": "d9075048-8edc-4555-b435-5b3a889fd8be",
        "location": "Alafaya",
        "memberSince": 2019-08-07T23:36:44.782Z,
        "name": "Margarita Kub",
        "username": "Cornell.Prohaska98",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-10T19:44:42.516Z,
      "direction": "incoming",
      "expires": 2023-12-24T18:52:55.178Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/680.jpg",
        "id": "8eaefe52-399f-47af-9ad1-62cbde503296",
        "location": "Cuyahoga Falls",
        "memberSince": 2018-12-19T08:43:20.401Z,
        "name": "Brenda Feest",
        "username": "Litzy61",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-28T19:41:05.212Z,
      "direction": "incoming",
      "expires": 2023-12-24T13:13:16.005Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1000.jpg",
        "id": "d5ec6308-0b89-4a1b-b54e-f5d709adccad",
        "location": "Dubuque",
        "memberSince": 2022-08-10T07:20:52.073Z,
        "name": "Leslie Kuhlman",
        "username": "Beryl56",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-25T02:03:59.931Z,
      "direction": "outgoing",
      "expires": 2023-12-24T02:53:48.438Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1094.jpg",
        "id": "a2a1a4b3-97ee-4f39-8f31-08da03e88699",
        "location": "Federal Way",
        "memberSince": 2020-03-01T05:46:30.094Z,
        "name": "Rosalie Rodriguez",
        "username": "Edwin_Donnelly84",
      },
      "friendId": "a2a1a4b3-97ee-4f39-8f31-08da03e88699",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-14T01:24:25.947Z,
      "direction": "outgoing",
      "expires": 2023-12-24T01:02:33.097Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/98.jpg",
        "id": "12943716-9a41-481b-ae11-cbb2117a1219",
        "location": "Port Charlotte",
        "memberSince": 2019-03-14T04:58:35.837Z,
        "name": "Frank Conroy",
        "username": "Foster_Witting",
      },
      "friendId": "12943716-9a41-481b-ae11-cbb2117a1219",
      "reason": undefined,
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friend requests will allow filtering by incoming friend requests 1`] = `
{
  "friendRequests": [
    {
      "accepted": undefined,
      "created": 2023-11-17T05:26:37.224Z,
      "direction": "incoming",
      "expires": 2023-12-24T21:26:39.125Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/956.jpg",
        "id": "d9075048-8edc-4555-b435-5b3a889fd8be",
        "location": "Alafaya",
        "memberSince": 2019-08-07T23:36:44.782Z,
        "name": "Margarita Kub",
        "username": "Cornell.Prohaska98",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-10T19:44:42.516Z,
      "direction": "incoming",
      "expires": 2023-12-24T18:52:55.178Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/680.jpg",
        "id": "8eaefe52-399f-47af-9ad1-62cbde503296",
        "location": "Cuyahoga Falls",
        "memberSince": 2018-12-19T08:43:20.401Z,
        "name": "Brenda Feest",
        "username": "Litzy61",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-28T19:41:05.212Z,
      "direction": "incoming",
      "expires": 2023-12-24T13:13:16.005Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1000.jpg",
        "id": "d5ec6308-0b89-4a1b-b54e-f5d709adccad",
        "location": "Dubuque",
        "memberSince": 2022-08-10T07:20:52.073Z,
        "name": "Leslie Kuhlman",
        "username": "Beryl56",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-01T11:24:23.830Z,
      "direction": "incoming",
      "expires": 2023-12-23T23:15:24.865Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/23.jpg",
        "id": "4e8b6334-926c-43d6-a830-7eb622edc77c",
        "location": "Iowa City",
        "memberSince": 2022-04-05T00:52:45.069Z,
        "name": "Frances Bartoletti",
        "username": "Anais67",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-19T08:30:43.233Z,
      "direction": "incoming",
      "expires": 2023-12-22T10:27:57.917Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/508.jpg",
        "id": "74439297-093a-4111-a091-f2c2cf186b96",
        "location": "Sugar Land",
        "memberSince": 2019-02-20T17:31:49.571Z,
        "name": "Valerie Erdman",
        "username": "Sonny_Kautzer60",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friend requests will allow filtering by outgoing friend requests 1`] = `
{
  "friendRequests": [
    {
      "accepted": undefined,
      "created": 2023-11-25T02:03:59.931Z,
      "direction": "outgoing",
      "expires": 2023-12-24T02:53:48.438Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1094.jpg",
        "id": "a2a1a4b3-97ee-4f39-8f31-08da03e88699",
        "location": "Federal Way",
        "memberSince": 2020-03-01T05:46:30.094Z,
        "name": "Rosalie Rodriguez",
        "username": "Edwin_Donnelly84",
      },
      "friendId": "a2a1a4b3-97ee-4f39-8f31-08da03e88699",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-14T01:24:25.947Z,
      "direction": "outgoing",
      "expires": 2023-12-24T01:02:33.097Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/98.jpg",
        "id": "12943716-9a41-481b-ae11-cbb2117a1219",
        "location": "Port Charlotte",
        "memberSince": 2019-03-14T04:58:35.837Z,
        "name": "Frank Conroy",
        "username": "Foster_Witting",
      },
      "friendId": "12943716-9a41-481b-ae11-cbb2117a1219",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-25T14:19:08.511Z,
      "direction": "outgoing",
      "expires": 2023-12-23T21:13:40.568Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
        "id": "3c0991bd-0c07-47fe-a77b-3777975dfcfe",
        "location": "Mount Prospect",
        "memberSince": 2017-10-18T14:51:50.449Z,
        "name": "Miss Andrea Volkman",
        "username": "Filiberto.Hettinger",
      },
      "friendId": "3c0991bd-0c07-47fe-a77b-3777975dfcfe",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-26T20:51:37.696Z,
      "direction": "outgoing",
      "expires": 2023-12-23T18:20:19.748Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1210.jpg",
        "id": "53f26b77-7821-425e-aa13-68f256ec9473",
        "location": "Missoula",
        "memberSince": 2023-08-10T20:07:10.702Z,
        "name": "Tyler Rempel",
        "username": "Wilma.Waelchi",
      },
      "friendId": "53f26b77-7821-425e-aa13-68f256ec9473",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-23T15:31:17.280Z,
      "direction": "outgoing",
      "expires": 2023-12-22T20:01:34.188Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1048.jpg",
        "id": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
        "location": "Hamilton",
        "memberSince": 2019-01-31T06:59:16.862Z,
        "name": "Patty Rosenbaum",
        "username": "Bobby.Stamm84",
      },
      "friendId": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
      "reason": undefined,
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friend requests will allow pagination of friend requests 1`] = `
{
  "friendRequests": [
    {
      "accepted": undefined,
      "created": 2023-10-19T08:30:43.233Z,
      "direction": "incoming",
      "expires": 2023-12-22T10:27:57.917Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/508.jpg",
        "id": "74439297-093a-4111-a091-f2c2cf186b96",
        "location": "Sugar Land",
        "memberSince": 2019-02-20T17:31:49.571Z,
        "name": "Valerie Erdman",
        "username": "Sonny_Kautzer60",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-15T13:29:26.969Z,
      "direction": "incoming",
      "expires": 2023-12-21T14:29:28.330Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/411.jpg",
        "id": "e46cb9f8-1322-4efe-8b94-b9920423c1ca",
        "location": "Milford",
        "memberSince": 2020-10-25T07:21:13.516Z,
        "name": "Eloise Jenkins",
        "username": "Darren56",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-28T00:29:05.406Z,
      "direction": "incoming",
      "expires": 2023-12-21T06:38:42.095Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/833.jpg",
        "id": "dbb3b23c-7c86-4ea2-ba7b-8cd26882b5af",
        "location": "Brooklyn Park",
        "memberSince": 2023-02-12T12:57:20.352Z,
        "name": "Anna Green",
        "username": "Amy_Franecki",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-29T21:32:45.691Z,
      "direction": "outgoing",
      "expires": 2023-12-20T23:56:50.377Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/402.jpg",
        "id": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
        "location": "Portsmouth",
        "memberSince": 2020-11-04T04:21:22.134Z,
        "name": "Ms. Lindsey Runolfsson",
        "username": "Abigale22",
      },
      "friendId": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-03T03:46:58.171Z,
      "direction": "outgoing",
      "expires": 2023-12-20T16:17:18.457Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/959.jpg",
        "id": "28b18988-9670-4f06-a4f8-210f084b34e8",
        "location": "Waterbury",
        "memberSince": 2018-03-15T05:43:50.090Z,
        "name": "Edgar Stark",
        "username": "Karianne.Kreiger",
      },
      "friendId": "28b18988-9670-4f06-a4f8-210f084b34e8",
      "reason": undefined,
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friend requests will list friend requests with default options 1`] = `
{
  "friendRequests": [
    {
      "accepted": undefined,
      "created": 2023-11-17T05:26:37.224Z,
      "direction": "incoming",
      "expires": 2023-12-24T21:26:39.125Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/956.jpg",
        "id": "d9075048-8edc-4555-b435-5b3a889fd8be",
        "location": "Alafaya",
        "memberSince": 2019-08-07T23:36:44.782Z,
        "name": "Margarita Kub",
        "username": "Cornell.Prohaska98",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-10T19:44:42.516Z,
      "direction": "incoming",
      "expires": 2023-12-24T18:52:55.178Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/680.jpg",
        "id": "8eaefe52-399f-47af-9ad1-62cbde503296",
        "location": "Cuyahoga Falls",
        "memberSince": 2018-12-19T08:43:20.401Z,
        "name": "Brenda Feest",
        "username": "Litzy61",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-28T19:41:05.212Z,
      "direction": "incoming",
      "expires": 2023-12-24T13:13:16.005Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1000.jpg",
        "id": "d5ec6308-0b89-4a1b-b54e-f5d709adccad",
        "location": "Dubuque",
        "memberSince": 2022-08-10T07:20:52.073Z,
        "name": "Leslie Kuhlman",
        "username": "Beryl56",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-25T02:03:59.931Z,
      "direction": "outgoing",
      "expires": 2023-12-24T02:53:48.438Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1094.jpg",
        "id": "a2a1a4b3-97ee-4f39-8f31-08da03e88699",
        "location": "Federal Way",
        "memberSince": 2020-03-01T05:46:30.094Z,
        "name": "Rosalie Rodriguez",
        "username": "Edwin_Donnelly84",
      },
      "friendId": "a2a1a4b3-97ee-4f39-8f31-08da03e88699",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-14T01:24:25.947Z,
      "direction": "outgoing",
      "expires": 2023-12-24T01:02:33.097Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/98.jpg",
        "id": "12943716-9a41-481b-ae11-cbb2117a1219",
        "location": "Port Charlotte",
        "memberSince": 2019-03-14T04:58:35.837Z,
        "name": "Frank Conroy",
        "username": "Foster_Witting",
      },
      "friendId": "12943716-9a41-481b-ae11-cbb2117a1219",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-01T11:24:23.830Z,
      "direction": "incoming",
      "expires": 2023-12-23T23:15:24.865Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/23.jpg",
        "id": "4e8b6334-926c-43d6-a830-7eb622edc77c",
        "location": "Iowa City",
        "memberSince": 2022-04-05T00:52:45.069Z,
        "name": "Frances Bartoletti",
        "username": "Anais67",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-25T14:19:08.511Z,
      "direction": "outgoing",
      "expires": 2023-12-23T21:13:40.568Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
        "id": "3c0991bd-0c07-47fe-a77b-3777975dfcfe",
        "location": "Mount Prospect",
        "memberSince": 2017-10-18T14:51:50.449Z,
        "name": "Miss Andrea Volkman",
        "username": "Filiberto.Hettinger",
      },
      "friendId": "3c0991bd-0c07-47fe-a77b-3777975dfcfe",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-26T20:51:37.696Z,
      "direction": "outgoing",
      "expires": 2023-12-23T18:20:19.748Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1210.jpg",
        "id": "53f26b77-7821-425e-aa13-68f256ec9473",
        "location": "Missoula",
        "memberSince": 2023-08-10T20:07:10.702Z,
        "name": "Tyler Rempel",
        "username": "Wilma.Waelchi",
      },
      "friendId": "53f26b77-7821-425e-aa13-68f256ec9473",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-23T15:31:17.280Z,
      "direction": "outgoing",
      "expires": 2023-12-22T20:01:34.188Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1048.jpg",
        "id": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
        "location": "Hamilton",
        "memberSince": 2019-01-31T06:59:16.862Z,
        "name": "Patty Rosenbaum",
        "username": "Bobby.Stamm84",
      },
      "friendId": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-12-01T00:50:13.280Z,
      "direction": "outgoing",
      "expires": 2023-12-22T18:14:44.664Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/267.jpg",
        "id": "889f6c22-afbe-44e1-a05b-1c6a9b7e2b38",
        "location": "Baltimore",
        "memberSince": 2018-07-18T19:10:55.504Z,
        "name": "Paulette Crona",
        "username": "Porter75",
      },
      "friendId": "889f6c22-afbe-44e1-a05b-1c6a9b7e2b38",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-19T08:30:43.233Z,
      "direction": "incoming",
      "expires": 2023-12-22T10:27:57.917Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/508.jpg",
        "id": "74439297-093a-4111-a091-f2c2cf186b96",
        "location": "Sugar Land",
        "memberSince": 2019-02-20T17:31:49.571Z,
        "name": "Valerie Erdman",
        "username": "Sonny_Kautzer60",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-15T13:29:26.969Z,
      "direction": "incoming",
      "expires": 2023-12-21T14:29:28.330Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/411.jpg",
        "id": "e46cb9f8-1322-4efe-8b94-b9920423c1ca",
        "location": "Milford",
        "memberSince": 2020-10-25T07:21:13.516Z,
        "name": "Eloise Jenkins",
        "username": "Darren56",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-28T00:29:05.406Z,
      "direction": "incoming",
      "expires": 2023-12-21T06:38:42.095Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/833.jpg",
        "id": "dbb3b23c-7c86-4ea2-ba7b-8cd26882b5af",
        "location": "Brooklyn Park",
        "memberSince": 2023-02-12T12:57:20.352Z,
        "name": "Anna Green",
        "username": "Amy_Franecki",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-29T21:32:45.691Z,
      "direction": "outgoing",
      "expires": 2023-12-20T23:56:50.377Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/402.jpg",
        "id": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
        "location": "Portsmouth",
        "memberSince": 2020-11-04T04:21:22.134Z,
        "name": "Ms. Lindsey Runolfsson",
        "username": "Abigale22",
      },
      "friendId": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-03T03:46:58.171Z,
      "direction": "outgoing",
      "expires": 2023-12-20T16:17:18.457Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/959.jpg",
        "id": "28b18988-9670-4f06-a4f8-210f084b34e8",
        "location": "Waterbury",
        "memberSince": 2018-03-15T05:43:50.090Z,
        "name": "Edgar Stark",
        "username": "Karianne.Kreiger",
      },
      "friendId": "28b18988-9670-4f06-a4f8-210f084b34e8",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-26T07:43:13.333Z,
      "direction": "outgoing",
      "expires": 2023-12-20T11:25:15.463Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/621.jpg",
        "id": "e1266ade-6c78-4542-8b7c-578259661c76",
        "location": "The Villages",
        "memberSince": 2018-04-25T21:42:11.884Z,
        "name": "Shaun Oberbrunner",
        "username": "Queenie.Stracke50",
      },
      "friendId": "e1266ade-6c78-4542-8b7c-578259661c76",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-25T22:04:28.192Z,
      "direction": "incoming",
      "expires": 2023-12-20T04:53:25.176Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/675.jpg",
        "id": "bb87ea29-bade-461c-af1f-c29c0c72bac9",
        "location": "Hamilton",
        "memberSince": 2019-01-29T19:36:20.175Z,
        "name": "Cristina Roberts",
        "username": "Paolo90",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-12-10T19:11:09.925Z,
      "direction": "incoming",
      "expires": 2023-12-20T02:22:45.637Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/650.jpg",
        "id": "a87e4421-19b3-48e1-960a-6d48481e6b42",
        "location": "Las Vegas",
        "memberSince": 2022-02-02T00:03:18.698Z,
        "name": "Fannie Kassulke",
        "username": "Dorothea.Boyer99",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-25T17:23:15.949Z,
      "direction": "incoming",
      "expires": 2023-12-19T22:22:58.906Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1204.jpg",
        "id": "83033f3d-3d04-49a2-9f53-62d6a8c54068",
        "location": "Bentonville",
        "memberSince": 2018-03-28T21:50:09.142Z,
        "name": "Rosa Boehm PhD",
        "username": "Margarett56",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-15T02:51:51.857Z,
      "direction": "incoming",
      "expires": 2023-12-19T20:44:35.636Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/411.jpg",
        "id": "1eb39e01-c3a5-478d-a6f4-16f20a1ec93f",
        "location": "Brockton",
        "memberSince": 2020-02-05T07:38:44.750Z,
        "name": "Jean Wuckert",
        "username": "Mariane26",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-24T04:36:48.047Z,
      "direction": "outgoing",
      "expires": 2023-12-19T16:27:19.246Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/34.jpg",
        "id": "8f9d78df-760f-46c5-a6fe-32f87277b17d",
        "location": "Carmel",
        "memberSince": 2023-08-14T23:47:58.955Z,
        "name": "Nick Bode",
        "username": "Reynold36",
      },
      "friendId": "8f9d78df-760f-46c5-a6fe-32f87277b17d",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-19T01:16:30.345Z,
      "direction": "incoming",
      "expires": 2023-12-19T10:26:18.556Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/157.jpg",
        "id": "9b802f1d-7edb-41de-9eb6-189162c0d40f",
        "location": "Cheyenne",
        "memberSince": 2022-12-17T20:33:32.058Z,
        "name": "Peter Schinner",
        "username": "Ignacio.Bogan16",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-12T23:11:52.182Z,
      "direction": "incoming",
      "expires": 2023-12-19T02:16:18.642Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/722.jpg",
        "id": "39c12391-1034-49ed-8ba7-f4a91dc17ef5",
        "location": "Bowie",
        "memberSince": 2021-01-19T01:12:17.451Z,
        "name": "Marco Powlowski",
        "username": "Alfredo.McKenzie",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-20T09:15:18.819Z,
      "direction": "incoming",
      "expires": 2023-12-18T22:10:23.073Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1023.jpg",
        "id": "bbcd7884-e08d-44b8-b9e7-919c50a84283",
        "location": "Delray Beach",
        "memberSince": 2023-03-16T18:32:48.887Z,
        "name": "Brandon Schultz",
        "username": "Darian.Morissette",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-23T23:05:25.929Z,
      "direction": "outgoing",
      "expires": 2023-12-18T21:14:52.320Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/275.jpg",
        "id": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
        "location": "Malden",
        "memberSince": 2023-04-11T08:43:54.366Z,
        "name": "Kathy Rice MD",
        "username": "Brando.Block99",
      },
      "friendId": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-12-04T22:05:36.978Z,
      "direction": "incoming",
      "expires": 2023-12-18T17:05:55.655Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/960.jpg",
        "id": "7f5bee59-387d-44ac-9c86-4b0cd1f42bdb",
        "location": "Lake Havasu City",
        "memberSince": 2023-01-24T01:02:36.126Z,
        "name": "Blanche Mount",
        "username": "Candido85",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-23T17:33:02.230Z,
      "direction": "outgoing",
      "expires": 2023-12-18T16:48:07.256Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/934.jpg",
        "id": "693bd086-adc9-43e0-9226-8a146c517ef1",
        "location": "Denver",
        "memberSince": 2018-12-02T22:50:49.843Z,
        "name": "Theresa Brown",
        "username": "Dennis38",
      },
      "friendId": "693bd086-adc9-43e0-9226-8a146c517ef1",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-09T10:14:12.596Z,
      "direction": "outgoing",
      "expires": 2023-12-18T00:27:14.457Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/166.jpg",
        "id": "d8fcba5e-bcd0-4646-b36e-167aaa78a1ff",
        "location": "Cheektowaga",
        "memberSince": 2021-09-21T16:07:39.148Z,
        "name": "Ray Anderson",
        "username": "Ruthe_Gutkowski98",
      },
      "friendId": "d8fcba5e-bcd0-4646-b36e-167aaa78a1ff",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-30T08:58:48.075Z,
      "direction": "outgoing",
      "expires": 2023-12-17T17:04:38.931Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1062.jpg",
        "id": "08a35be6-db26-42fe-bbdd-a67bdd6c62f8",
        "location": "O'Fallon",
        "memberSince": 2021-02-17T16:15:26.001Z,
        "name": "Robin Lueilwitz",
        "username": "Ella.Vandervort36",
      },
      "friendId": "08a35be6-db26-42fe-bbdd-a67bdd6c62f8",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-12-07T20:08:52.429Z,
      "direction": "incoming",
      "expires": 2023-12-17T09:53:28.783Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/738.jpg",
        "id": "0e3c0843-bf52-4933-af90-7aef95afc6a1",
        "location": "Shawnee",
        "memberSince": 2022-11-16T06:53:43.015Z,
        "name": "Elsie Fadel PhD",
        "username": "Elian85",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-04T23:03:27.620Z,
      "direction": "incoming",
      "expires": 2023-12-16T12:12:56.330Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/533.jpg",
        "id": "d22e174b-e14d-49ab-bb36-10edc701a210",
        "location": "Lynchburg",
        "memberSince": 2020-02-23T02:15:36.978Z,
        "name": "Isaac Gerhold",
        "username": "Ross19",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-12-08T16:34:52.200Z,
      "direction": "outgoing",
      "expires": 2023-12-16T05:55:05.810Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/677.jpg",
        "id": "9616d456-44dd-4514-b57e-a16e43cba340",
        "location": "Bloomington",
        "memberSince": 2018-04-11T20:12:03.309Z,
        "name": "Miss Clifford Stamm",
        "username": "Axel_Kuhlman14",
      },
      "friendId": "9616d456-44dd-4514-b57e-a16e43cba340",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-02T02:04:02.329Z,
      "direction": "incoming",
      "expires": 2023-12-16T00:10:59.376Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/537.jpg",
        "id": "114b836a-63ad-436b-990b-55ba2556e025",
        "location": "Vallejo",
        "memberSince": 2019-07-07T23:05:29.923Z,
        "name": "Cecelia Strosin",
        "username": "Brendan_Vandervort",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-21T03:05:30.197Z,
      "direction": "incoming",
      "expires": 2023-12-15T23:08:17.492Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/749.jpg",
        "id": "d4946021-afda-4373-bcc3-40824690c317",
        "location": "Boca Raton",
        "memberSince": 2022-03-08T03:30:54.540Z,
        "name": "Dr. John Dietrich",
        "username": "Ollie83",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-24T17:48:53.186Z,
      "direction": "incoming",
      "expires": 2023-12-15T16:47:38.301Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1032.jpg",
        "id": "f79cb4cc-0ee0-4763-8499-1814aca5fca6",
        "location": "Gulfport",
        "memberSince": 2018-03-02T00:57:38.477Z,
        "name": "Roderick Spinka",
        "username": "Chauncey50",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-11T03:23:15.624Z,
      "direction": "outgoing",
      "expires": 2023-12-15T13:08:39.662Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/638.jpg",
        "id": "9b61f214-0fa5-4571-8cf1-a4d12e58caed",
        "location": "Town 'n' Country",
        "memberSince": 2023-07-03T17:13:14.538Z,
        "name": "Marshall Fadel",
        "username": "Sebastian.Pollich89",
      },
      "friendId": "9b61f214-0fa5-4571-8cf1-a4d12e58caed",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-26T16:42:59.516Z,
      "direction": "incoming",
      "expires": 2023-12-15T12:34:51.242Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/729.jpg",
        "id": "40222789-063f-46da-b6d8-382fc2f81cf7",
        "location": "Annandale",
        "memberSince": 2019-12-26T01:17:06.750Z,
        "name": "Kenny Kemmer",
        "username": "Marcia67",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-12-01T09:55:30.404Z,
      "direction": "outgoing",
      "expires": 2023-12-15T06:41:13.995Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1145.jpg",
        "id": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
        "location": "Freeport",
        "memberSince": 2023-02-04T10:50:58.496Z,
        "name": "Sara Ortiz",
        "username": "Allan.Witting",
      },
      "friendId": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-03T02:39:09.457Z,
      "direction": "incoming",
      "expires": 2023-12-14T20:19:57.197Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/544.jpg",
        "id": "d1c16403-9265-4efb-a136-724ecb4166a7",
        "location": "Redwood City",
        "memberSince": 2018-05-13T04:21:12.187Z,
        "name": "Blanca Rowe",
        "username": "Wanda52",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-12-07T14:06:30.281Z,
      "direction": "outgoing",
      "expires": 2023-12-14T13:40:16.452Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/611.jpg",
        "id": "a15f630c-6cb1-456c-a2f6-1b5f60c79a0f",
        "location": "Allentown",
        "memberSince": 2022-05-15T01:42:21.855Z,
        "name": "Ginger Mertz DDS",
        "username": "Quinten_Dibbert",
      },
      "friendId": "a15f630c-6cb1-456c-a2f6-1b5f60c79a0f",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-25T13:17:27.364Z,
      "direction": "outgoing",
      "expires": 2023-12-14T09:55:14.926Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/112.jpg",
        "id": "847cb80e-03d8-4f0e-90b8-a4aef97ee6c1",
        "location": "Plainfield",
        "memberSince": 2021-10-23T10:20:26.624Z,
        "name": "Ricardo Jakubowski",
        "username": "Valerie_Nienow",
      },
      "friendId": "847cb80e-03d8-4f0e-90b8-a4aef97ee6c1",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-25T17:39:36.364Z,
      "direction": "incoming",
      "expires": 2023-12-13T22:47:56.860Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/33.jpg",
        "id": "cb6da4ee-b0be-4828-8c20-ad6b04fd8ceb",
        "location": "New York",
        "memberSince": 2020-02-14T01:50:49.743Z,
        "name": "Tamara Littel",
        "username": "Laverna78",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-13T06:19:41.364Z,
      "direction": "incoming",
      "expires": 2023-12-13T19:52:47.901Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/104.jpg",
        "id": "2231aec5-b304-4786-8a43-a3495236a7bf",
        "location": "Goodyear",
        "memberSince": 2021-05-07T00:16:40.682Z,
        "name": "Cecelia Rohan",
        "username": "Dayton_Rempel48",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-12-02T16:41:42.632Z,
      "direction": "outgoing",
      "expires": 2023-12-13T17:00:42.257Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/866.jpg",
        "id": "6117de57-300c-4ba9-a2cc-1f21ffcdb5be",
        "location": "Avondale",
        "memberSince": 2022-04-22T16:45:02.217Z,
        "name": "Laverne Luettgen",
        "username": "Marie61",
      },
      "friendId": "6117de57-300c-4ba9-a2cc-1f21ffcdb5be",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-12-05T09:02:34.737Z,
      "direction": "outgoing",
      "expires": 2023-12-13T14:25:23.621Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/585.jpg",
        "id": "d3252e2b-8018-4679-969e-0375f1129c12",
        "location": "DeKalb",
        "memberSince": 2018-04-10T08:44:26.871Z,
        "name": "Mr. Dan Douglas",
        "username": "Gertrude_Cassin23",
      },
      "friendId": "d3252e2b-8018-4679-969e-0375f1129c12",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-12T23:19:44.983Z,
      "direction": "outgoing",
      "expires": 2023-12-13T10:32:59.659Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/151.jpg",
        "id": "e5ad74ec-43a5-4a1b-8b9b-7ad85f8fee13",
        "location": "Melbourne",
        "memberSince": 2021-04-19T17:29:16.827Z,
        "name": "Mrs. Stewart Grant",
        "username": "Monica51",
      },
      "friendId": "e5ad74ec-43a5-4a1b-8b9b-7ad85f8fee13",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-27T09:21:55.366Z,
      "direction": "outgoing",
      "expires": 2023-12-12T22:24:50.545Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/876.jpg",
        "id": "f3623080-04a0-4137-9661-f338f2aef3f6",
        "location": "Bolingbrook",
        "memberSince": 2022-06-25T23:18:32.119Z,
        "name": "Annie Schowalter",
        "username": "Laverna87",
      },
      "friendId": "f3623080-04a0-4137-9661-f338f2aef3f6",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-30T00:21:30.251Z,
      "direction": "outgoing",
      "expires": 2023-12-12T18:51:40.702Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1124.jpg",
        "id": "ed5df084-8725-41f7-a053-b6a86eadbc8d",
        "location": "Mount Vernon",
        "memberSince": 2020-09-19T15:47:05.910Z,
        "name": "Jim Grant",
        "username": "David_Ratke",
      },
      "friendId": "ed5df084-8725-41f7-a053-b6a86eadbc8d",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-11-16T10:26:09.961Z,
      "direction": "outgoing",
      "expires": 2023-12-12T18:24:47.068Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
        "id": "bbb62e72-5060-4ddf-9759-dce260d54213",
        "location": "Jefferson City",
        "memberSince": 2023-08-16T14:18:28.639Z,
        "name": "Whitney Douglas",
        "username": "Cletus.Breitenberg",
      },
      "friendId": "bbb62e72-5060-4ddf-9759-dce260d54213",
      "reason": undefined,
    },
    {
      "accepted": undefined,
      "created": 2023-10-22T12:05:07.209Z,
      "direction": "incoming",
      "expires": 2023-12-12T07:23:24.903Z,
      "friend": {
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/445.jpg",
        "id": "0df06e55-8e58-4cb3-8499-9873f9677783",
        "location": "Westminster",
        "memberSince": 2019-01-23T19:44:53.232Z,
        "name": "Lana Daugherty II",
        "username": "Aglae.Glover11",
      },
      "friendId": "ea60a001-a27b-4fb8-a1f2-998ab77d9726",
      "reason": undefined,
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friends will allow pagination of friends 1`] = `
{
  "friends": [
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/112.jpg",
      "friendsSince": 2020-09-22T22:40:21.341Z,
      "id": "847cb80e-03d8-4f0e-90b8-a4aef97ee6c1",
      "location": "Plainfield",
      "memberSince": 2021-10-23T10:20:26.624Z,
      "name": "Ricardo Jakubowski",
      "username": "Valerie_Nienow",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/445.jpg",
      "friendsSince": 2020-08-30T05:56:23.306Z,
      "id": "0df06e55-8e58-4cb3-8499-9873f9677783",
      "location": "Westminster",
      "memberSince": 2019-01-23T19:44:53.232Z,
      "name": "Lana Daugherty II",
      "username": "Aglae.Glover11",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
      "friendsSince": 2020-08-08T22:31:26.647Z,
      "id": "bbb62e72-5060-4ddf-9759-dce260d54213",
      "location": "Jefferson City",
      "memberSince": 2023-08-16T14:18:28.639Z,
      "name": "Whitney Douglas",
      "username": "Cletus.Breitenberg",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/677.jpg",
      "friendsSince": 2020-07-18T18:47:06.618Z,
      "id": "9616d456-44dd-4514-b57e-a16e43cba340",
      "location": "Bloomington",
      "memberSince": 2018-04-11T20:12:03.309Z,
      "name": "Miss Clifford Stamm",
      "username": "Axel_Kuhlman14",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/23.jpg",
      "friendsSince": 2020-07-12T01:01:04.989Z,
      "id": "4e8b6334-926c-43d6-a830-7eb622edc77c",
      "location": "Iowa City",
      "memberSince": 2022-04-05T00:52:45.069Z,
      "name": "Frances Bartoletti",
      "username": "Anais67",
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friends will allow sorting by friendsSince in asc order 1`] = `
{
  "friends": [
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/34.jpg",
      "friendsSince": 2017-12-27T02:18:05.491Z,
      "id": "8f9d78df-760f-46c5-a6fe-32f87277b17d",
      "location": "Carmel",
      "memberSince": 2023-08-14T23:47:58.955Z,
      "name": "Nick Bode",
      "username": "Reynold36",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/533.jpg",
      "friendsSince": 2018-03-30T04:00:06.659Z,
      "id": "d22e174b-e14d-49ab-bb36-10edc701a210",
      "location": "Lynchburg",
      "memberSince": 2020-02-23T02:15:36.978Z,
      "name": "Isaac Gerhold",
      "username": "Ross19",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1124.jpg",
      "friendsSince": 2018-06-17T00:47:21.264Z,
      "id": "ed5df084-8725-41f7-a053-b6a86eadbc8d",
      "location": "Mount Vernon",
      "memberSince": 2020-09-19T15:47:05.910Z,
      "name": "Jim Grant",
      "username": "David_Ratke",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1062.jpg",
      "friendsSince": 2018-07-27T17:50:08.746Z,
      "id": "08a35be6-db26-42fe-bbdd-a67bdd6c62f8",
      "location": "O'Fallon",
      "memberSince": 2021-02-17T16:15:26.001Z,
      "name": "Robin Lueilwitz",
      "username": "Ella.Vandervort36",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1094.jpg",
      "friendsSince": 2018-08-06T09:50:37.566Z,
      "id": "a2a1a4b3-97ee-4f39-8f31-08da03e88699",
      "location": "Federal Way",
      "memberSince": 2020-03-01T05:46:30.094Z,
      "name": "Rosalie Rodriguez",
      "username": "Edwin_Donnelly84",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/680.jpg",
      "friendsSince": 2018-08-22T09:52:23.402Z,
      "id": "8eaefe52-399f-47af-9ad1-62cbde503296",
      "location": "Cuyahoga Falls",
      "memberSince": 2018-12-19T08:43:20.401Z,
      "name": "Brenda Feest",
      "username": "Litzy61",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/104.jpg",
      "friendsSince": 2018-10-11T15:47:57.411Z,
      "id": "2231aec5-b304-4786-8a43-a3495236a7bf",
      "location": "Goodyear",
      "memberSince": 2021-05-07T00:16:40.682Z,
      "name": "Cecelia Rohan",
      "username": "Dayton_Rempel48",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/934.jpg",
      "friendsSince": 2019-01-20T09:49:36.651Z,
      "id": "693bd086-adc9-43e0-9226-8a146c517ef1",
      "location": "Denver",
      "memberSince": 2018-12-02T22:50:49.843Z,
      "name": "Theresa Brown",
      "username": "Dennis38",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/275.jpg",
      "friendsSince": 2019-03-08T10:39:01.717Z,
      "id": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
      "location": "Malden",
      "memberSince": 2023-04-11T08:43:54.366Z,
      "name": "Kathy Rice MD",
      "username": "Brando.Block99",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/98.jpg",
      "friendsSince": 2019-04-14T23:22:32.788Z,
      "id": "12943716-9a41-481b-ae11-cbb2117a1219",
      "location": "Port Charlotte",
      "memberSince": 2019-03-14T04:58:35.837Z,
      "name": "Frank Conroy",
      "username": "Foster_Witting",
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friends will allow sorting by friendsSince in desc order 1`] = `
{
  "friends": [
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/866.jpg",
      "friendsSince": 2023-09-27T10:14:51.889Z,
      "id": "6117de57-300c-4ba9-a2cc-1f21ffcdb5be",
      "location": "Avondale",
      "memberSince": 2022-04-22T16:45:02.217Z,
      "name": "Laverne Luettgen",
      "username": "Marie61",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1204.jpg",
      "friendsSince": 2023-09-06T20:32:48.865Z,
      "id": "83033f3d-3d04-49a2-9f53-62d6a8c54068",
      "location": "Bentonville",
      "memberSince": 2018-03-28T21:50:09.142Z,
      "name": "Rosa Boehm PhD",
      "username": "Margarett56",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1145.jpg",
      "friendsSince": 2023-08-11T17:55:13.129Z,
      "id": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
      "location": "Freeport",
      "memberSince": 2023-02-04T10:50:58.496Z,
      "name": "Sara Ortiz",
      "username": "Allan.Witting",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/402.jpg",
      "friendsSince": 2023-06-16T08:29:21.543Z,
      "id": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
      "location": "Portsmouth",
      "memberSince": 2020-11-04T04:21:22.134Z,
      "name": "Ms. Lindsey Runolfsson",
      "username": "Abigale22",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/166.jpg",
      "friendsSince": 2023-06-03T04:01:02.544Z,
      "id": "d8fcba5e-bcd0-4646-b36e-167aaa78a1ff",
      "location": "Cheektowaga",
      "memberSince": 2021-09-21T16:07:39.148Z,
      "name": "Ray Anderson",
      "username": "Ruthe_Gutkowski98",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/151.jpg",
      "friendsSince": 2023-02-09T05:11:31.377Z,
      "id": "e5ad74ec-43a5-4a1b-8b9b-7ad85f8fee13",
      "location": "Melbourne",
      "memberSince": 2021-04-19T17:29:16.827Z,
      "name": "Mrs. Stewart Grant",
      "username": "Monica51",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/959.jpg",
      "friendsSince": 2022-12-28T05:26:42.861Z,
      "id": "28b18988-9670-4f06-a4f8-210f084b34e8",
      "location": "Waterbury",
      "memberSince": 2018-03-15T05:43:50.090Z,
      "name": "Edgar Stark",
      "username": "Karianne.Kreiger",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1210.jpg",
      "friendsSince": 2022-12-12T23:01:10.594Z,
      "id": "53f26b77-7821-425e-aa13-68f256ec9473",
      "location": "Missoula",
      "memberSince": 2023-08-10T20:07:10.702Z,
      "name": "Tyler Rempel",
      "username": "Wilma.Waelchi",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/638.jpg",
      "friendsSince": 2022-11-27T14:38:07.675Z,
      "id": "9b61f214-0fa5-4571-8cf1-a4d12e58caed",
      "location": "Town 'n' Country",
      "memberSince": 2023-07-03T17:13:14.538Z,
      "name": "Marshall Fadel",
      "username": "Sebastian.Pollich89",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/650.jpg",
      "friendsSince": 2022-11-25T04:32:29.406Z,
      "id": "a87e4421-19b3-48e1-960a-6d48481e6b42",
      "location": "Las Vegas",
      "memberSince": 2022-02-02T00:03:18.698Z,
      "name": "Fannie Kassulke",
      "username": "Dorothea.Boyer99",
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friends will allow sorting by memberSince in asc order 1`] = `
{
  "friends": [
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
      "friendsSince": 2019-07-13T14:24:55.587Z,
      "id": "3c0991bd-0c07-47fe-a77b-3777975dfcfe",
      "location": "Mount Prospect",
      "memberSince": 2017-10-18T14:51:50.449Z,
      "name": "Miss Andrea Volkman",
      "username": "Filiberto.Hettinger",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1032.jpg",
      "friendsSince": 2022-04-11T18:19:27.747Z,
      "id": "f79cb4cc-0ee0-4763-8499-1814aca5fca6",
      "location": "Gulfport",
      "memberSince": 2018-03-02T00:57:38.477Z,
      "name": "Roderick Spinka",
      "username": "Chauncey50",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/959.jpg",
      "friendsSince": 2022-12-28T05:26:42.861Z,
      "id": "28b18988-9670-4f06-a4f8-210f084b34e8",
      "location": "Waterbury",
      "memberSince": 2018-03-15T05:43:50.090Z,
      "name": "Edgar Stark",
      "username": "Karianne.Kreiger",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1204.jpg",
      "friendsSince": 2023-09-06T20:32:48.865Z,
      "id": "83033f3d-3d04-49a2-9f53-62d6a8c54068",
      "location": "Bentonville",
      "memberSince": 2018-03-28T21:50:09.142Z,
      "name": "Rosa Boehm PhD",
      "username": "Margarett56",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/585.jpg",
      "friendsSince": 2021-11-26T11:32:46.745Z,
      "id": "d3252e2b-8018-4679-969e-0375f1129c12",
      "location": "DeKalb",
      "memberSince": 2018-04-10T08:44:26.871Z,
      "name": "Mr. Dan Douglas",
      "username": "Gertrude_Cassin23",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/677.jpg",
      "friendsSince": 2020-07-18T18:47:06.618Z,
      "id": "9616d456-44dd-4514-b57e-a16e43cba340",
      "location": "Bloomington",
      "memberSince": 2018-04-11T20:12:03.309Z,
      "name": "Miss Clifford Stamm",
      "username": "Axel_Kuhlman14",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/621.jpg",
      "friendsSince": 2020-05-30T02:52:36.217Z,
      "id": "e1266ade-6c78-4542-8b7c-578259661c76",
      "location": "The Villages",
      "memberSince": 2018-04-25T21:42:11.884Z,
      "name": "Shaun Oberbrunner",
      "username": "Queenie.Stracke50",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/544.jpg",
      "friendsSince": 2019-12-09T21:26:56.781Z,
      "id": "d1c16403-9265-4efb-a136-724ecb4166a7",
      "location": "Redwood City",
      "memberSince": 2018-05-13T04:21:12.187Z,
      "name": "Blanca Rowe",
      "username": "Wanda52",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/267.jpg",
      "friendsSince": 2020-10-21T05:37:45.000Z,
      "id": "889f6c22-afbe-44e1-a05b-1c6a9b7e2b38",
      "location": "Baltimore",
      "memberSince": 2018-07-18T19:10:55.504Z,
      "name": "Paulette Crona",
      "username": "Porter75",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/934.jpg",
      "friendsSince": 2019-01-20T09:49:36.651Z,
      "id": "693bd086-adc9-43e0-9226-8a146c517ef1",
      "location": "Denver",
      "memberSince": 2018-12-02T22:50:49.843Z,
      "name": "Theresa Brown",
      "username": "Dennis38",
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friends will allow sorting by memberSince in desc order 1`] = `
{
  "friends": [
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
      "friendsSince": 2020-08-08T22:31:26.647Z,
      "id": "bbb62e72-5060-4ddf-9759-dce260d54213",
      "location": "Jefferson City",
      "memberSince": 2023-08-16T14:18:28.639Z,
      "name": "Whitney Douglas",
      "username": "Cletus.Breitenberg",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/34.jpg",
      "friendsSince": 2017-12-27T02:18:05.491Z,
      "id": "8f9d78df-760f-46c5-a6fe-32f87277b17d",
      "location": "Carmel",
      "memberSince": 2023-08-14T23:47:58.955Z,
      "name": "Nick Bode",
      "username": "Reynold36",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1210.jpg",
      "friendsSince": 2022-12-12T23:01:10.594Z,
      "id": "53f26b77-7821-425e-aa13-68f256ec9473",
      "location": "Missoula",
      "memberSince": 2023-08-10T20:07:10.702Z,
      "name": "Tyler Rempel",
      "username": "Wilma.Waelchi",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/638.jpg",
      "friendsSince": 2022-11-27T14:38:07.675Z,
      "id": "9b61f214-0fa5-4571-8cf1-a4d12e58caed",
      "location": "Town 'n' Country",
      "memberSince": 2023-07-03T17:13:14.538Z,
      "name": "Marshall Fadel",
      "username": "Sebastian.Pollich89",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/275.jpg",
      "friendsSince": 2019-03-08T10:39:01.717Z,
      "id": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
      "location": "Malden",
      "memberSince": 2023-04-11T08:43:54.366Z,
      "name": "Kathy Rice MD",
      "username": "Brando.Block99",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1023.jpg",
      "friendsSince": 2021-08-07T07:53:37.581Z,
      "id": "bbcd7884-e08d-44b8-b9e7-919c50a84283",
      "location": "Delray Beach",
      "memberSince": 2023-03-16T18:32:48.887Z,
      "name": "Brandon Schultz",
      "username": "Darian.Morissette",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/833.jpg",
      "friendsSince": 2020-12-15T08:48:16.066Z,
      "id": "dbb3b23c-7c86-4ea2-ba7b-8cd26882b5af",
      "location": "Brooklyn Park",
      "memberSince": 2023-02-12T12:57:20.352Z,
      "name": "Anna Green",
      "username": "Amy_Franecki",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1145.jpg",
      "friendsSince": 2023-08-11T17:55:13.129Z,
      "id": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
      "location": "Freeport",
      "memberSince": 2023-02-04T10:50:58.496Z,
      "name": "Sara Ortiz",
      "username": "Allan.Witting",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/960.jpg",
      "friendsSince": 2020-07-04T08:07:00.989Z,
      "id": "7f5bee59-387d-44ac-9c86-4b0cd1f42bdb",
      "location": "Lake Havasu City",
      "memberSince": 2023-01-24T01:02:36.126Z,
      "name": "Blanche Mount",
      "username": "Candido85",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/157.jpg",
      "friendsSince": 2022-08-06T05:32:31.338Z,
      "id": "9b802f1d-7edb-41de-9eb6-189162c0d40f",
      "location": "Cheyenne",
      "memberSince": 2022-12-17T20:33:32.058Z,
      "name": "Peter Schinner",
      "username": "Ignacio.Bogan16",
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friends will allow sorting by username in asc order 1`] = `
{
  "friends": [
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/402.jpg",
      "friendsSince": 2023-06-16T08:29:21.543Z,
      "id": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
      "location": "Portsmouth",
      "memberSince": 2020-11-04T04:21:22.134Z,
      "name": "Ms. Lindsey Runolfsson",
      "username": "Abigale22",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/445.jpg",
      "friendsSince": 2020-08-30T05:56:23.306Z,
      "id": "0df06e55-8e58-4cb3-8499-9873f9677783",
      "location": "Westminster",
      "memberSince": 2019-01-23T19:44:53.232Z,
      "name": "Lana Daugherty II",
      "username": "Aglae.Glover11",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/722.jpg",
      "friendsSince": 2021-01-28T15:29:57.617Z,
      "id": "39c12391-1034-49ed-8ba7-f4a91dc17ef5",
      "location": "Bowie",
      "memberSince": 2021-01-19T01:12:17.451Z,
      "name": "Marco Powlowski",
      "username": "Alfredo.McKenzie",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1145.jpg",
      "friendsSince": 2023-08-11T17:55:13.129Z,
      "id": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
      "location": "Freeport",
      "memberSince": 2023-02-04T10:50:58.496Z,
      "name": "Sara Ortiz",
      "username": "Allan.Witting",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/833.jpg",
      "friendsSince": 2020-12-15T08:48:16.066Z,
      "id": "dbb3b23c-7c86-4ea2-ba7b-8cd26882b5af",
      "location": "Brooklyn Park",
      "memberSince": 2023-02-12T12:57:20.352Z,
      "name": "Anna Green",
      "username": "Amy_Franecki",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/23.jpg",
      "friendsSince": 2020-07-12T01:01:04.989Z,
      "id": "4e8b6334-926c-43d6-a830-7eb622edc77c",
      "location": "Iowa City",
      "memberSince": 2022-04-05T00:52:45.069Z,
      "name": "Frances Bartoletti",
      "username": "Anais67",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/677.jpg",
      "friendsSince": 2020-07-18T18:47:06.618Z,
      "id": "9616d456-44dd-4514-b57e-a16e43cba340",
      "location": "Bloomington",
      "memberSince": 2018-04-11T20:12:03.309Z,
      "name": "Miss Clifford Stamm",
      "username": "Axel_Kuhlman14",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1000.jpg",
      "friendsSince": 2019-05-07T06:24:11.384Z,
      "id": "d5ec6308-0b89-4a1b-b54e-f5d709adccad",
      "location": "Dubuque",
      "memberSince": 2022-08-10T07:20:52.073Z,
      "name": "Leslie Kuhlman",
      "username": "Beryl56",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1048.jpg",
      "friendsSince": 2021-11-06T12:53:08.588Z,
      "id": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
      "location": "Hamilton",
      "memberSince": 2019-01-31T06:59:16.862Z,
      "name": "Patty Rosenbaum",
      "username": "Bobby.Stamm84",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/275.jpg",
      "friendsSince": 2019-03-08T10:39:01.717Z,
      "id": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
      "location": "Malden",
      "memberSince": 2023-04-11T08:43:54.366Z,
      "name": "Kathy Rice MD",
      "username": "Brando.Block99",
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friends will allow sorting by username in desc order 1`] = `
{
  "friends": [
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1210.jpg",
      "friendsSince": 2022-12-12T23:01:10.594Z,
      "id": "53f26b77-7821-425e-aa13-68f256ec9473",
      "location": "Missoula",
      "memberSince": 2023-08-10T20:07:10.702Z,
      "name": "Tyler Rempel",
      "username": "Wilma.Waelchi",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/544.jpg",
      "friendsSince": 2019-12-09T21:26:56.781Z,
      "id": "d1c16403-9265-4efb-a136-724ecb4166a7",
      "location": "Redwood City",
      "memberSince": 2018-05-13T04:21:12.187Z,
      "name": "Blanca Rowe",
      "username": "Wanda52",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/112.jpg",
      "friendsSince": 2020-09-22T22:40:21.341Z,
      "id": "847cb80e-03d8-4f0e-90b8-a4aef97ee6c1",
      "location": "Plainfield",
      "memberSince": 2021-10-23T10:20:26.624Z,
      "name": "Ricardo Jakubowski",
      "username": "Valerie_Nienow",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/508.jpg",
      "friendsSince": 2021-11-15T00:38:37.330Z,
      "id": "74439297-093a-4111-a091-f2c2cf186b96",
      "location": "Sugar Land",
      "memberSince": 2019-02-20T17:31:49.571Z,
      "name": "Valerie Erdman",
      "username": "Sonny_Kautzer60",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/638.jpg",
      "friendsSince": 2022-11-27T14:38:07.675Z,
      "id": "9b61f214-0fa5-4571-8cf1-a4d12e58caed",
      "location": "Town 'n' Country",
      "memberSince": 2023-07-03T17:13:14.538Z,
      "name": "Marshall Fadel",
      "username": "Sebastian.Pollich89",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/166.jpg",
      "friendsSince": 2023-06-03T04:01:02.544Z,
      "id": "d8fcba5e-bcd0-4646-b36e-167aaa78a1ff",
      "location": "Cheektowaga",
      "memberSince": 2021-09-21T16:07:39.148Z,
      "name": "Ray Anderson",
      "username": "Ruthe_Gutkowski98",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/533.jpg",
      "friendsSince": 2018-03-30T04:00:06.659Z,
      "id": "d22e174b-e14d-49ab-bb36-10edc701a210",
      "location": "Lynchburg",
      "memberSince": 2020-02-23T02:15:36.978Z,
      "name": "Isaac Gerhold",
      "username": "Ross19",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/34.jpg",
      "friendsSince": 2017-12-27T02:18:05.491Z,
      "id": "8f9d78df-760f-46c5-a6fe-32f87277b17d",
      "location": "Carmel",
      "memberSince": 2023-08-14T23:47:58.955Z,
      "name": "Nick Bode",
      "username": "Reynold36",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/611.jpg",
      "friendsSince": 2020-04-24T12:05:23.700Z,
      "id": "a15f630c-6cb1-456c-a2f6-1b5f60c79a0f",
      "location": "Allentown",
      "memberSince": 2022-05-15T01:42:21.855Z,
      "name": "Ginger Mertz DDS",
      "username": "Quinten_Dibbert",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/621.jpg",
      "friendsSince": 2020-05-30T02:52:36.217Z,
      "id": "e1266ade-6c78-4542-8b7c-578259661c76",
      "location": "The Villages",
      "memberSince": 2018-04-25T21:42:11.884Z,
      "name": "Shaun Oberbrunner",
      "username": "Queenie.Stracke50",
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friends will list friends with default options 1`] = `
{
  "friends": [
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/866.jpg",
      "friendsSince": 2023-09-27T10:14:51.889Z,
      "id": "6117de57-300c-4ba9-a2cc-1f21ffcdb5be",
      "location": "Avondale",
      "memberSince": 2022-04-22T16:45:02.217Z,
      "name": "Laverne Luettgen",
      "username": "Marie61",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1204.jpg",
      "friendsSince": 2023-09-06T20:32:48.865Z,
      "id": "83033f3d-3d04-49a2-9f53-62d6a8c54068",
      "location": "Bentonville",
      "memberSince": 2018-03-28T21:50:09.142Z,
      "name": "Rosa Boehm PhD",
      "username": "Margarett56",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1145.jpg",
      "friendsSince": 2023-08-11T17:55:13.129Z,
      "id": "6b5b9750-fc86-48c0-956b-5b92a123b5d8",
      "location": "Freeport",
      "memberSince": 2023-02-04T10:50:58.496Z,
      "name": "Sara Ortiz",
      "username": "Allan.Witting",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/402.jpg",
      "friendsSince": 2023-06-16T08:29:21.543Z,
      "id": "fb44dd9c-bdb1-4267-9fc2-25778819c5df",
      "location": "Portsmouth",
      "memberSince": 2020-11-04T04:21:22.134Z,
      "name": "Ms. Lindsey Runolfsson",
      "username": "Abigale22",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/166.jpg",
      "friendsSince": 2023-06-03T04:01:02.544Z,
      "id": "d8fcba5e-bcd0-4646-b36e-167aaa78a1ff",
      "location": "Cheektowaga",
      "memberSince": 2021-09-21T16:07:39.148Z,
      "name": "Ray Anderson",
      "username": "Ruthe_Gutkowski98",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/151.jpg",
      "friendsSince": 2023-02-09T05:11:31.377Z,
      "id": "e5ad74ec-43a5-4a1b-8b9b-7ad85f8fee13",
      "location": "Melbourne",
      "memberSince": 2021-04-19T17:29:16.827Z,
      "name": "Mrs. Stewart Grant",
      "username": "Monica51",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/959.jpg",
      "friendsSince": 2022-12-28T05:26:42.861Z,
      "id": "28b18988-9670-4f06-a4f8-210f084b34e8",
      "location": "Waterbury",
      "memberSince": 2018-03-15T05:43:50.090Z,
      "name": "Edgar Stark",
      "username": "Karianne.Kreiger",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1210.jpg",
      "friendsSince": 2022-12-12T23:01:10.594Z,
      "id": "53f26b77-7821-425e-aa13-68f256ec9473",
      "location": "Missoula",
      "memberSince": 2023-08-10T20:07:10.702Z,
      "name": "Tyler Rempel",
      "username": "Wilma.Waelchi",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/638.jpg",
      "friendsSince": 2022-11-27T14:38:07.675Z,
      "id": "9b61f214-0fa5-4571-8cf1-a4d12e58caed",
      "location": "Town 'n' Country",
      "memberSince": 2023-07-03T17:13:14.538Z,
      "name": "Marshall Fadel",
      "username": "Sebastian.Pollich89",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/650.jpg",
      "friendsSince": 2022-11-25T04:32:29.406Z,
      "id": "a87e4421-19b3-48e1-960a-6d48481e6b42",
      "location": "Las Vegas",
      "memberSince": 2022-02-02T00:03:18.698Z,
      "name": "Fannie Kassulke",
      "username": "Dorothea.Boyer99",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/157.jpg",
      "friendsSince": 2022-08-06T05:32:31.338Z,
      "id": "9b802f1d-7edb-41de-9eb6-189162c0d40f",
      "location": "Cheyenne",
      "memberSince": 2022-12-17T20:33:32.058Z,
      "name": "Peter Schinner",
      "username": "Ignacio.Bogan16",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/738.jpg",
      "friendsSince": 2022-04-30T07:17:40.388Z,
      "id": "0e3c0843-bf52-4933-af90-7aef95afc6a1",
      "location": "Shawnee",
      "memberSince": 2022-11-16T06:53:43.015Z,
      "name": "Elsie Fadel PhD",
      "username": "Elian85",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1032.jpg",
      "friendsSince": 2022-04-11T18:19:27.747Z,
      "id": "f79cb4cc-0ee0-4763-8499-1814aca5fca6",
      "location": "Gulfport",
      "memberSince": 2018-03-02T00:57:38.477Z,
      "name": "Roderick Spinka",
      "username": "Chauncey50",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/537.jpg",
      "friendsSince": 2022-03-20T16:14:35.812Z,
      "id": "114b836a-63ad-436b-990b-55ba2556e025",
      "location": "Vallejo",
      "memberSince": 2019-07-07T23:05:29.923Z,
      "name": "Cecelia Strosin",
      "username": "Brendan_Vandervort",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/411.jpg",
      "friendsSince": 2022-03-03T16:05:18.687Z,
      "id": "e46cb9f8-1322-4efe-8b94-b9920423c1ca",
      "location": "Milford",
      "memberSince": 2020-10-25T07:21:13.516Z,
      "name": "Eloise Jenkins",
      "username": "Darren56",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/585.jpg",
      "friendsSince": 2021-11-26T11:32:46.745Z,
      "id": "d3252e2b-8018-4679-969e-0375f1129c12",
      "location": "DeKalb",
      "memberSince": 2018-04-10T08:44:26.871Z,
      "name": "Mr. Dan Douglas",
      "username": "Gertrude_Cassin23",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/508.jpg",
      "friendsSince": 2021-11-15T00:38:37.330Z,
      "id": "74439297-093a-4111-a091-f2c2cf186b96",
      "location": "Sugar Land",
      "memberSince": 2019-02-20T17:31:49.571Z,
      "name": "Valerie Erdman",
      "username": "Sonny_Kautzer60",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1048.jpg",
      "friendsSince": 2021-11-06T12:53:08.588Z,
      "id": "7dbdf8c6-b444-42c7-901c-51c2a4dae657",
      "location": "Hamilton",
      "memberSince": 2019-01-31T06:59:16.862Z,
      "name": "Patty Rosenbaum",
      "username": "Bobby.Stamm84",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/675.jpg",
      "friendsSince": 2021-10-11T21:02:25.600Z,
      "id": "bb87ea29-bade-461c-af1f-c29c0c72bac9",
      "location": "Hamilton",
      "memberSince": 2019-01-29T19:36:20.175Z,
      "name": "Cristina Roberts",
      "username": "Paolo90",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1023.jpg",
      "friendsSince": 2021-08-07T07:53:37.581Z,
      "id": "bbcd7884-e08d-44b8-b9e7-919c50a84283",
      "location": "Delray Beach",
      "memberSince": 2023-03-16T18:32:48.887Z,
      "name": "Brandon Schultz",
      "username": "Darian.Morissette",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/956.jpg",
      "friendsSince": 2021-02-16T23:54:43.706Z,
      "id": "d9075048-8edc-4555-b435-5b3a889fd8be",
      "location": "Alafaya",
      "memberSince": 2019-08-07T23:36:44.782Z,
      "name": "Margarita Kub",
      "username": "Cornell.Prohaska98",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/722.jpg",
      "friendsSince": 2021-01-28T15:29:57.617Z,
      "id": "39c12391-1034-49ed-8ba7-f4a91dc17ef5",
      "location": "Bowie",
      "memberSince": 2021-01-19T01:12:17.451Z,
      "name": "Marco Powlowski",
      "username": "Alfredo.McKenzie",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/729.jpg",
      "friendsSince": 2021-01-26T14:40:12.722Z,
      "id": "40222789-063f-46da-b6d8-382fc2f81cf7",
      "location": "Annandale",
      "memberSince": 2019-12-26T01:17:06.750Z,
      "name": "Kenny Kemmer",
      "username": "Marcia67",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/833.jpg",
      "friendsSince": 2020-12-15T08:48:16.066Z,
      "id": "dbb3b23c-7c86-4ea2-ba7b-8cd26882b5af",
      "location": "Brooklyn Park",
      "memberSince": 2023-02-12T12:57:20.352Z,
      "name": "Anna Green",
      "username": "Amy_Franecki",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/267.jpg",
      "friendsSince": 2020-10-21T05:37:45.000Z,
      "id": "889f6c22-afbe-44e1-a05b-1c6a9b7e2b38",
      "location": "Baltimore",
      "memberSince": 2018-07-18T19:10:55.504Z,
      "name": "Paulette Crona",
      "username": "Porter75",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/112.jpg",
      "friendsSince": 2020-09-22T22:40:21.341Z,
      "id": "847cb80e-03d8-4f0e-90b8-a4aef97ee6c1",
      "location": "Plainfield",
      "memberSince": 2021-10-23T10:20:26.624Z,
      "name": "Ricardo Jakubowski",
      "username": "Valerie_Nienow",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/445.jpg",
      "friendsSince": 2020-08-30T05:56:23.306Z,
      "id": "0df06e55-8e58-4cb3-8499-9873f9677783",
      "location": "Westminster",
      "memberSince": 2019-01-23T19:44:53.232Z,
      "name": "Lana Daugherty II",
      "username": "Aglae.Glover11",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
      "friendsSince": 2020-08-08T22:31:26.647Z,
      "id": "bbb62e72-5060-4ddf-9759-dce260d54213",
      "location": "Jefferson City",
      "memberSince": 2023-08-16T14:18:28.639Z,
      "name": "Whitney Douglas",
      "username": "Cletus.Breitenberg",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/677.jpg",
      "friendsSince": 2020-07-18T18:47:06.618Z,
      "id": "9616d456-44dd-4514-b57e-a16e43cba340",
      "location": "Bloomington",
      "memberSince": 2018-04-11T20:12:03.309Z,
      "name": "Miss Clifford Stamm",
      "username": "Axel_Kuhlman14",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/23.jpg",
      "friendsSince": 2020-07-12T01:01:04.989Z,
      "id": "4e8b6334-926c-43d6-a830-7eb622edc77c",
      "location": "Iowa City",
      "memberSince": 2022-04-05T00:52:45.069Z,
      "name": "Frances Bartoletti",
      "username": "Anais67",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/960.jpg",
      "friendsSince": 2020-07-04T08:07:00.989Z,
      "id": "7f5bee59-387d-44ac-9c86-4b0cd1f42bdb",
      "location": "Lake Havasu City",
      "memberSince": 2023-01-24T01:02:36.126Z,
      "name": "Blanche Mount",
      "username": "Candido85",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/621.jpg",
      "friendsSince": 2020-05-30T02:52:36.217Z,
      "id": "e1266ade-6c78-4542-8b7c-578259661c76",
      "location": "The Villages",
      "memberSince": 2018-04-25T21:42:11.884Z,
      "name": "Shaun Oberbrunner",
      "username": "Queenie.Stracke50",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/411.jpg",
      "friendsSince": 2020-05-14T01:02:16.015Z,
      "id": "1eb39e01-c3a5-478d-a6f4-16f20a1ec93f",
      "location": "Brockton",
      "memberSince": 2020-02-05T07:38:44.750Z,
      "name": "Jean Wuckert",
      "username": "Mariane26",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/611.jpg",
      "friendsSince": 2020-04-24T12:05:23.700Z,
      "id": "a15f630c-6cb1-456c-a2f6-1b5f60c79a0f",
      "location": "Allentown",
      "memberSince": 2022-05-15T01:42:21.855Z,
      "name": "Ginger Mertz DDS",
      "username": "Quinten_Dibbert",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/544.jpg",
      "friendsSince": 2019-12-09T21:26:56.781Z,
      "id": "d1c16403-9265-4efb-a136-724ecb4166a7",
      "location": "Redwood City",
      "memberSince": 2018-05-13T04:21:12.187Z,
      "name": "Blanca Rowe",
      "username": "Wanda52",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/749.jpg",
      "friendsSince": 2019-09-16T09:45:51.365Z,
      "id": "d4946021-afda-4373-bcc3-40824690c317",
      "location": "Boca Raton",
      "memberSince": 2022-03-08T03:30:54.540Z,
      "name": "Dr. John Dietrich",
      "username": "Ollie83",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
      "friendsSince": 2019-07-13T14:24:55.587Z,
      "id": "3c0991bd-0c07-47fe-a77b-3777975dfcfe",
      "location": "Mount Prospect",
      "memberSince": 2017-10-18T14:51:50.449Z,
      "name": "Miss Andrea Volkman",
      "username": "Filiberto.Hettinger",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/33.jpg",
      "friendsSince": 2019-07-09T12:32:58.794Z,
      "id": "cb6da4ee-b0be-4828-8c20-ad6b04fd8ceb",
      "location": "New York",
      "memberSince": 2020-02-14T01:50:49.743Z,
      "name": "Tamara Littel",
      "username": "Laverna78",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/876.jpg",
      "friendsSince": 2019-05-20T17:03:38.346Z,
      "id": "f3623080-04a0-4137-9661-f338f2aef3f6",
      "location": "Bolingbrook",
      "memberSince": 2022-06-25T23:18:32.119Z,
      "name": "Annie Schowalter",
      "username": "Laverna87",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1000.jpg",
      "friendsSince": 2019-05-07T06:24:11.384Z,
      "id": "d5ec6308-0b89-4a1b-b54e-f5d709adccad",
      "location": "Dubuque",
      "memberSince": 2022-08-10T07:20:52.073Z,
      "name": "Leslie Kuhlman",
      "username": "Beryl56",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/98.jpg",
      "friendsSince": 2019-04-14T23:22:32.788Z,
      "id": "12943716-9a41-481b-ae11-cbb2117a1219",
      "location": "Port Charlotte",
      "memberSince": 2019-03-14T04:58:35.837Z,
      "name": "Frank Conroy",
      "username": "Foster_Witting",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/275.jpg",
      "friendsSince": 2019-03-08T10:39:01.717Z,
      "id": "1df9bcfe-867a-4e5c-980f-ddb899886ec8",
      "location": "Malden",
      "memberSince": 2023-04-11T08:43:54.366Z,
      "name": "Kathy Rice MD",
      "username": "Brando.Block99",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/934.jpg",
      "friendsSince": 2019-01-20T09:49:36.651Z,
      "id": "693bd086-adc9-43e0-9226-8a146c517ef1",
      "location": "Denver",
      "memberSince": 2018-12-02T22:50:49.843Z,
      "name": "Theresa Brown",
      "username": "Dennis38",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/104.jpg",
      "friendsSince": 2018-10-11T15:47:57.411Z,
      "id": "2231aec5-b304-4786-8a43-a3495236a7bf",
      "location": "Goodyear",
      "memberSince": 2021-05-07T00:16:40.682Z,
      "name": "Cecelia Rohan",
      "username": "Dayton_Rempel48",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/680.jpg",
      "friendsSince": 2018-08-22T09:52:23.402Z,
      "id": "8eaefe52-399f-47af-9ad1-62cbde503296",
      "location": "Cuyahoga Falls",
      "memberSince": 2018-12-19T08:43:20.401Z,
      "name": "Brenda Feest",
      "username": "Litzy61",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1094.jpg",
      "friendsSince": 2018-08-06T09:50:37.566Z,
      "id": "a2a1a4b3-97ee-4f39-8f31-08da03e88699",
      "location": "Federal Way",
      "memberSince": 2020-03-01T05:46:30.094Z,
      "name": "Rosalie Rodriguez",
      "username": "Edwin_Donnelly84",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1062.jpg",
      "friendsSince": 2018-07-27T17:50:08.746Z,
      "id": "08a35be6-db26-42fe-bbdd-a67bdd6c62f8",
      "location": "O'Fallon",
      "memberSince": 2021-02-17T16:15:26.001Z,
      "name": "Robin Lueilwitz",
      "username": "Ella.Vandervort36",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1124.jpg",
      "friendsSince": 2018-06-17T00:47:21.264Z,
      "id": "ed5df084-8725-41f7-a053-b6a86eadbc8d",
      "location": "Mount Vernon",
      "memberSince": 2020-09-19T15:47:05.910Z,
      "name": "Jim Grant",
      "username": "David_Ratke",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/533.jpg",
      "friendsSince": 2018-03-30T04:00:06.659Z,
      "id": "d22e174b-e14d-49ab-bb36-10edc701a210",
      "location": "Lynchburg",
      "memberSince": 2020-02-23T02:15:36.978Z,
      "name": "Isaac Gerhold",
      "username": "Ross19",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/34.jpg",
      "friendsSince": 2017-12-27T02:18:05.491Z,
      "id": "8f9d78df-760f-46c5-a6fe-32f87277b17d",
      "location": "Carmel",
      "memberSince": 2023-08-14T23:47:58.955Z,
      "name": "Nick Bode",
      "username": "Reynold36",
    },
  ],
  "totalCount": 50,
}
`;

exports[`Friends Service when listing friends will list friends, respecting the privacy of private accounts 1`] = `
{
  "friends": [
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1087.jpg",
      "friendsSince": 2023-12-11T17:21:44.781Z,
      "id": "edbc5d2c-da35-4724-a563-af88d69d5668",
      "location": "Diamond Bar",
      "memberSince": 2021-07-02T08:27:54.544Z,
      "name": "Elena Bahringer",
      "username": "Elisabeth_Raynor30",
    },
    {
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1232.jpg",
      "friendsSince": 2023-12-11T17:21:44.781Z,
      "id": "e53ac770-374f-4a62-9202-a8d230cc43f8",
      "location": "El Monte",
      "memberSince": 2022-03-21T22:58:19.726Z,
      "name": "Nick Heller",
      "username": "Dahlia.Kerluke59",
    },
    {
      "friendsSince": 2023-12-11T17:21:44.781Z,
      "id": "ee942718-f5b4-4e74-8ac5-66b6ed254f90",
      "memberSince": 2022-09-20T22:53:03.480Z,
      "username": "Emerald_Johnson43",
    },
  ],
  "totalCount": 53,
}
`;

exports[`Friends Service when retrieving a single friend will respect the friend's privacy settings 1`] = `
{
  "friendsSince": 2023-12-11T17:21:44.781Z,
  "id": "bbb62e72-5060-4ddf-9759-dce260d54213",
  "memberSince": 2023-08-16T14:18:28.639Z,
  "username": "Cletus.Breitenberg",
}
`;

exports[`Friends Service when retrieving a single friend will return the friend if the friend exists 1`] = `
{
  "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/525.jpg",
  "friendsSince": 2023-12-11T17:21:44.781Z,
  "id": "bbb62e72-5060-4ddf-9759-dce260d54213",
  "location": "Jefferson City",
  "memberSince": 2023-08-16T14:18:28.639Z,
  "name": "Whitney Douglas",
  "username": "Cletus.Breitenberg",
}
`;
